frame/support/test/tests/derive_no_bound_ui/eq.rs
trait Config {
	type C;
}

#[derive(frame_support::EqNoBound)]
struct Foo<T: Config> {
	c: T::C,
}

fn main() {}
